tests/bad/frontend/wrongOverrideSignature.latte
class A {
	int f(int x, boolean y) {
		return 0;
	}
}

class B extends A {
	int f(int x, int y) {
		return 0;
	}
}

int main() {
	return 0;
}
